@@ -1,7 +1,7 @@
 /**   
  * License Agreement for Jaeksoft OpenSearchServer
  *
- * Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -194,7 +194,7 @@ public class UrlItem implements Serializable {
 
 	}
 
-	public void setContentLength(long v) {
+	public void setContentLength(Long v) {
 		contentLength = v;
 
 	}
