@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 3015939: Cluster collapsing
 - 2830490: Size of the index
 - 3011847: Score explanation
 - 3008633: Possibility to turn off the highlighting
@@ -35,6 +36,7 @@ New features:
 - 2900449: Upgrade PDFBox to 0.8
 
 Bug fixes:
+- 3015838: Web crawler problem with UTF-8 BOM encoding
 - 2993103: NoClassDefFoundError BouncyCastleProvider
 - 2990960: keyword are not highlighted in snippets
 - 2982541: Phrase synonyms generate unwanted words
